--- a/_config.yml
+++ b/_config.yml
@@ -102,4 +102,4 @@ theme: next
 deploy:
   type: git
   repository: git@github.com:chenglijunnanduo/chenglijunnanduo.github.io.git
-  branch: master
+  branch: gh-pages
